k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: das-backend
  labels:
    app: das-backend
spec:
  selector:
    matchLabels:
      app: das-backend
  template:
    metadata:
      labels:
        app: das-backend
    spec:
      containers:
        - name: das-backend
          image: sncap/das-backend:0.1.0
          ports:
          - containerPort: 8090
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: das-backend
spec:
  type: ClusterIP
  selector:
    app: das-backend
  ports:
  - port: 8090
