k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: das-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: das-frontend
  template:
    metadata:
      labels:
        app: das-frontend
    spec:
      containers:
        - name: das-frontend
          image: sncap/das-frontend:0.0.1
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: das-frontend
spec:
  type: ClusterIP
  selector:
    app: das-frontend
  ports:
  - port: 8080
