k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: das-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: das-frontend
          servicePort: 8080
      - path: /api
        backend:
          serviceName: das-backend
          servicePort: 8090
      - path: /cds
        backend:
          serviceName: das-backend
          servicePort: 8090
      - path: /downloadFile
        backend:
          serviceName: das-backend
          servicePort: 8090
      - path: /api2Csv
        backend:
          serviceName: das-backend
          servicePort: 8090
